Bug 135567 - Chart Wizard not allowing to choose data range with mouse (gtk3)
Summary: Chart Wizard not allowing to choose data range with mouse (gtk3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-08-08 21:10 UTC by Felipe Viggiano
Modified: 2020-09-03 20:41 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felipe Viggiano 2020-08-08 21:10:15 UTC
When creating a new chart on Calc, usin Char Wizard, it's not possible to choose the cells with the mouse button in the Data Range dialog.

Steps to reproduce:

1. Create a new spreadsheet on Calc.
2. Click on an empty cell and go to Insert > Chart on the Menu Bar.
3. Select the type of the chart.
4. Click on the Data Range option of the Chart Wizard dialog.
5. To choose the Data Range, click on the Select data range button (button placed right after the Data range input box).

Expected result:
It should be possible to choose the data range with the mouse.

Actual result:
Calc won't let the user click on any cell.
Comment 1 Xisco Faulí 2020-08-10 17:17:23 UTC
Thank you for reporting the bug. To be certain the reported issue is not related to corruption in the user profile, could you please reset your Libreoffice profile ( https://wiki.documentfoundation.org/UserProfile ) and re-test?

I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' if the issue is still present
Comment 2 Felipe Viggiano 2020-08-11 00:12:23 UTC
Reporting issue still present after resetting user profile.

Version information:

Version: 7.0.0.3
Build ID: 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded
Comment 3 Xisco Faulí 2020-08-11 10:09:16 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=77445e201c45e5593761e8399c32f80eea2178a4

author	Szymon Kłos <szymon.klos@collabora.com>	2019-04-17 17:33:10 +0200
committer	Szymon Kłos <szymon.klos@collabora.com>	2020-05-18 20:45:26 +0200
commit 77445e201c45e5593761e8399c32f80eea2178a4 (patch)
tree db0010bc4842b224382e6cdca5b18aa89185068b
parent 835bced249e95ccbf0a88266f8c1ba166cf5efcb (diff)
Make Chart Creation Wizard async

Bisected with: bibisect-linux64-7.0

Adding Cc: to Szymon Kłos
Comment 4 Xisco Faulí 2020-08-11 10:09:54 UTC
it seems it only happens with gtk3.
@Caolán, I thought you might be interested in this issue
Comment 5 Caolán McNamara 2020-08-11 13:22:26 UTC
there's a special case for this changing-modality during execution, which is only in effect for non-async dialog
Comment 6 Commit Notification 2020-08-11 15:35:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f6253490c48b1e16becb5baf428ad3505a8ed2e2

tdf#135567 for async case need an alternative check for dialog in execution

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2020-08-12 08:50:22 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: df37937018fe8e87dad5dd97689632044ba56de3
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue. Should it be closed as RESOLVED FIXED ?
Comment 8 Commit Notification 2020-08-12 08:51:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/cb3a18269745fb8cee12885a5064c862f54f8f11

tdf#135567 for async case need an alternative check for dialog in execution

It will be available in 7.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 BogdanB 2020-09-03 20:41:05 UTC
It's ok now

Version: 7.1.0.0.alpha0+
Build ID: e2f4e65a7b8024c00b049eebf0d87637efda7f24
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (ro_RO.UTF-8); UI: en-US
Calc: threaded