tdf#135567 for async case need an alternative check for dialog in execution

Change-Id: I326b891b61f8a9848b56b2f26a80af80ab045dec
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100501
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>